--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         const { useState, useEffect } = React;
 
         // 아이콘 컴포넌트 (SVG 직접 정의)
-        // SyntaxError 해결: 인접한 JSX 엘리먼트들을 <> </> (Fragment)로 감쌌습니다.
         const Icon = ({ name, className = "w-6 h-6", fill = "none" }) => {
             const icons = {
                 heart: <path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z" />,
@@ -232,13 +231,13 @@
 
             const grade = getGrade();
             return (
-                <div className="min-h-screen bg-sky-50 text-slate-800 p-6 md:p-12 animate-in slide-in-from-bottom duration-700">
+                <div className="min-h-screen bg-sky-50 text-slate-800 p-6 md:p-12 animate-in slide-in-from-bottom duration-700 selection:bg-sky-200">
                     <div className="max-w-3xl mx-auto">
                         <div className="flex justify-between items-center mb-10 no-print">
-                            <button onClick={() => setView('form')} className="flex items-center gap-2 text-blue-800 hover:text-blue-600 font-bold">
+                            <button onClick={() => setView('form')} className="flex items-center gap-2 text-blue-800 hover:text-blue-600 font-bold transition-all hover:-translate-x-1">
                                 <Icon name="chevronLeft" className="w-5 h-5" /> 기획 수정하기
                             </button>
-                            <button onClick={() => window.print()} className="flex items-center gap-3 px-8 py-4 bg-blue-700 text-white rounded-2xl font-black hover:bg-blue-800 shadow-xl transition-all">
+                            <button onClick={() => window.print()} className="flex items-center gap-3 px-8 py-4 bg-blue-700 text-white rounded-2xl font-black hover:bg-blue-800 shadow-xl transition-all active:scale-95">
                                 <Icon name="printer" className="w-5 h-5" /> 리포트 저장/인쇄
                             </button>
                         </div>
@@ -246,6 +245,7 @@
                         <div className="border-[8px] border-white shadow-2xl p-8 md:p-16 rounded-[4rem] bg-white relative overflow-hidden">
                             <div className="absolute top-0 right-0 w-64 h-64 bg-sky-100 rounded-full -mr-20 -mt-20 blur-3xl opacity-50"></div>
                             <div className="absolute bottom-0 left-0 w-48 h-48 bg-blue-100 rounded-full -ml-10 -mb-10 blur-3xl opacity-50"></div>
+
                             <div className="relative z-10">
                                 <div className="text-center mb-14">
                                     <div className="inline-block px-5 py-1.5 bg-blue-600 text-white rounded-full text-[10px] font-black mb-5 tracking-[0.3em] shadow-lg shadow-blue-200">BRIGHT FUTURE REPORT</div>
@@ -254,33 +254,45 @@
                                         <Icon name="sun" className="w-5 h-5 text-amber-400" /> 선생님의 연수가 더 눈부시게 빛날 준비를 마쳤습니다.
                                     </p>
                                 </div>
+
                                 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 mb-12">
-                                    <div className="bg-sky-50 p-8 rounded-[2.5rem] border border-sky-100 text-center">
-                                        <p className="text-xs text-sky-400 font-black mb-2 uppercase">현재 기획 달성도</p>
+                                    <div className="bg-sky-50 p-8 rounded-[2.5rem] border border-sky-100 text-center shadow-inner">
+                                        <p className="text-xs text-sky-400 font-black mb-2 uppercase tracking-tighter">현재 기획 달성도</p>
                                         <p className="text-6xl font-black text-blue-900">{progress}<span className="text-2xl ml-1">%</span></p>
                                     </div>
-                                    <div className={`${grade.bg} ${grade.border} p-8 rounded-[2.5rem] text-center flex flex-col items-center justify-center border-2 border-dashed`}>
+                                    <div className={`${grade.bg} ${grade.border} p-8 rounded-[2.5rem] text-center flex flex-col items-center justify-center border-2 border-dashed shadow-sm`}>
                                         <Icon name="award" className={`w-10 h-10 mb-2 ${grade.color}`} />
-                                        <p className="text-xs font-bold text-slate-400 mb-1 uppercase">기획 전문가 등급</p>
+                                        <p className="text-xs font-bold text-slate-400 mb-1 uppercase tracking-widest">기획 전문가 등급</p>
                                         <p className={`text-2xl font-black ${grade.color}`}>{grade.title}</p>
                                     </div>
                                 </div>
+
                                 <div className="bg-gradient-to-r from-blue-700 to-sky-600 text-white p-8 rounded-[2rem] mb-12 flex items-center gap-6 shadow-xl shadow-blue-100">
-                                    <div className="bg-white/20 p-3 rounded-2xl"><Icon name="sparkles" className="w-10 h-10 text-sky-200" /></div>
+                                    <div className="bg-white/20 p-3 rounded-2xl">
+                                        <Icon name="sparkles" className="w-10 h-10 text-sky-200" />
+                                    </div>
                                     <div>
                                         <p className="text-sm font-bold opacity-90 mb-0.5">나의 특별한 성장 포인트</p>
-                                        <p className="text-xl font-black">이미 <span className="text-sky-200 underline underline-offset-4">{checkedTotal}가지</span>의 보석 같은 기획을 완벽하게 준비하셨습니다!</p>
+                                        <p className="text-xl font-black">
+                                            이미 <span className="text-sky-200 underline underline-offset-4">{checkedTotal}가지</span>의 보석 같은 기획을 완벽하게 준비하셨습니다!
+                                        </p>
                                     </div>
                                 </div>
+
                                 <div className="space-y-12">
                                     {categories.map(cat => {
                                         const unchecked = cat.items.filter((_, idx) => !checkedItems[`${cat.id}-${idx}`]);
                                         if (unchecked.length === 0 && !notes[cat.id]) return null;
+
                                         return (
                                             <div key={cat.id} className="relative">
                                                 <div className="flex items-center justify-between mb-5 border-b-2 border-sky-100 pb-3">
-                                                    <h3 className="font-black text-2xl text-blue-900">{cat.title}</h3>
+                                                    <h3 className="font-black text-2xl text-blue-900 flex items-center gap-2">
+                                                        <div className="w-3 h-3 bg-sky-400 rounded-full"></div>
+                                                        {cat.title}
+                                                    </h3>
                                                 </div>
+                                                
                                                 <div className="pl-6 space-y-8">
                                                     {unchecked.length > 0 && (
                                                         <div className="bg-sky-50/50 p-6 rounded-3xl border border-sky-100">
@@ -289,17 +301,23 @@
                                                             </p>
                                                             <ul className="grid grid-cols-1 gap-3">
                                                                 {unchecked.map((item, idx) => (
-                                                                    <li key={idx} className="text-[16px] text-slate-700 font-semibold flex items-start gap-3">
-                                                                        <div className="w-1.5 h-1.5 bg-blue-300 rounded-full mt-2.5 shrink-0"></div> {item}
+                                                                    <li key={idx} className="text-[16px] text-slate-700 font-semibold flex items-start gap-3 group">
+                                                                        <div className="w-1.5 h-1.5 bg-blue-300 rounded-full mt-2.5 shrink-0 group-hover:bg-blue-500 transition-colors"></div>
+                                                                        {item}
                                                                     </li>
                                                                 ))}
                                                             </ul>
                                                         </div>
                                                     )}
+
                                                     {notes[cat.id] && (
                                                         <div className="bg-white p-6 rounded-3xl border-2 border-dashed border-sky-200 relative">
-                                                            <div className="absolute -top-3 left-6 px-3 bg-white text-[10px] font-black text-sky-400 uppercase tracking-widest">나의 소중한 생각들</div>
-                                                            <p className="text-[16px] text-blue-900/80 leading-relaxed font-bold whitespace-pre-wrap italic">"{notes[cat.id]}"</p>
+                                                            <div className="absolute -top-3 left-6 px-3 bg-white text-[10px] font-black text-sky-400 uppercase tracking-widest">
+                                                                나의 소중한 생각들
+                                                            </div>
+                                                            <p className="text-[16px] text-blue-900/80 leading-relaxed font-bold whitespace-pre-wrap italic">
+                                                                "{notes[cat.id]}"
+                                                            </p>
                                                         </div>
                                                     )}
                                                 </div>
@@ -307,8 +325,11 @@
                                         );
                                     })}
                                 </div>
+
                                 <div className="mt-20 pt-12 border-t border-sky-100 text-center">
-                                    <p className="text-slate-400 text-sm font-medium">본 리포트는 선생님의 기획이 현장의 온기가 되어 전달되기를 바라는 마음으로 작성되었습니다.</p>
+                                    <p className="text-slate-400 text-sm font-medium">
+                                        본 리포트는 선생님의 기획이 현장의 온기가 되어 전달되기를 바라는 마음으로 작성되었습니다.
+                                    </p>
                                 </div>
                             </div>
                         </div>
